# DieRollSim

./: CMakeLists.txt
src/: die_rolling_simulation.cpp
